k8s/apps/file-browser/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: file-browser
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
