k8s/apps/file-browser/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
